--- a/urco/furc/templates/furc/loginPage.html
+++ b/urco/furc/templates/furc/loginPage.html
@@ -36,7 +36,7 @@
 				<img src="{% static 'images/flinder-logo_white.png' %}" class="logo-log ml-3 img-fluid" alt="Responsive image">
 			</div>
 			<div class="card-body">
-				<form action="{% url 'login' %}" method="POST">
+				<form action="{% url 'logIn' %}" method="POST">
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-user"></i></span>
