--- a/urco/furc/templates/furc/orderManager.html
+++ b/urco/furc/templates/furc/orderManager.html
@@ -136,7 +136,7 @@
             <div id="new-order" class="content-section" style="display:none;">
                 <h2>New Orders</h2>
                 {% for i in pending_order %}
-                <form action="/orderStatusUpdate/" method="POST">
+                <form action="{% url 'orderStatusUpdate' %}" method="POST">
                     {% csrf_token %}
                     <div class="order-item">
                         <p>{{i.order_id}}</p>
